--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "log": "pm2 log training",
     "start": "pm2 start app.js --name training --watch && npm run log",
     "stop": "pm2 kill",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit ./test/*"
   },
   "keywords": [
     "nodejs",
@@ -17,11 +17,16 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "mocha": "^5.2.0",
     "mongoose": "^5.2.3",
-    "pm2": "^3.0.0"
+    "pm2": "^3.0.0",
+    "request": "^2.87.0",
+    "sinon": "^6.1.3"
   }
 }
