--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: '3'
 services:
+  node:
+    build: .
+    restart: always
+    environment:
+      NODE_ENV: development
+      PORT: 80
+    ports:
+      - '80:3000'
+    volumes:
+      - .:/usr/src/node
+      - /usr/src/node/node_modules
+    links:
+      - mongo:mongo
   mongo:
     build: ./mongo
     restart: always
